umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_ch4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["C#h4"] :bonds []} :success true}
  :counts {:output {:atoms ["C#h4"] :bonds []} :success true}}
