umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_h2s.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["S#h2#n2"] :bonds [] :charge 0 :spin "#u0#s1"}
    :success true}
  :counts {
    :output {:atoms ["S#h2#n2"] :bonds [] :charge 0 :spin "#u0#s1"}
    :success true}}
