umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_h2te.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Te#h2#n2"] :bonds []} :success true}
  :counts {:output {:atoms ["Te#h2#n2"] :bonds []} :success true}}
